Change packaging to war

--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
   <groupId>com.jenkins.assignment</groupId>
   <artifactId>jenkins-assignment</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>war</packaging>
   
 	<parent>
 	    <groupId>org.springframework.boot</groupId>
