--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,15 @@
 		    <artifactId>spring-security-test</artifactId>                          
 		    <scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
+		<finalName>jenkins-assignment</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
